--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1350,44 +1350,7 @@
    "execution_count": null,
    "id": "1dc82b06",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "총 10개의 메뉴 항목이 처리되었습니다.\n",
-      "\n",
-      "메뉴 번호: 1\n",
-      "메뉴 이름: 샤토 마고 2015\n",
-      "내용:\n",
-      "1. 샤토 마고 2015\n",
-      "   • 가격: ₩450,000\n",
-      "   • 주요 품종: 카베르네 소비뇽, 메를로, 카베르네 프랑, 쁘띠 베르도\n",
-      "   • 설명: 보르도 메독 지역의 프리미엄 ...\n",
-      "\n",
-      "메뉴 번호: 2\n",
-      "메뉴 이름: 돔 페리뇽 2012\n",
-      "내용:\n",
-      "2. 돔 페리뇽 2012\n",
-      "   • 가격: ₩380,000\n",
-      "   • 주요 품종: 샤르도네, 피노 누아\n",
-      "   • 설명: 프랑스 샴페인의 대명사로 알려진 프레스티지 큐베입니다. 시트러스...\n",
-      "검색 결과: 4개\n",
-      "메뉴 번호: 1\n",
-      "메뉴 이름: 시그니처 스테이크\n",
-      "\n",
-      "메뉴 번호: 8\n",
-      "메뉴 이름: 안심 스테이크 샐러드\n",
-      "\n",
-      "메뉴 번호: 3\n",
-      "메뉴 이름: 연어 타르타르\n",
-      "\n",
-      "메뉴 번호: 2\n",
-      "메뉴 이름: 트러플 리조또\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 와인 메뉴 텍스트 데이터를 로드\n",
     "loader = TextLoader(\"../data/restaurant_wine.txt\", encoding=\"utf-8\")\n",
@@ -1400,11 +1363,22 @@
     "\n",
     "# 결과 출력\n",
     "print(f\"총 {len(wine_documents)}개의 메뉴 항목이 처리되었습니다.\")\n",
-    "for doc in wine_documents[:2]:\n",
+    "for doc in wine_documents:\n",
     "    print(f\"\\n메뉴 번호: {doc.metadata['menu_number']}\")\n",
     "    print(f\"메뉴 이름: {doc.metadata['menu_name']}\")\n",
     "    print(f\"내용:\\n{doc.page_content[:100]}...\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "514fdf37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "embeddings_model = UpstageEmbeddings(model=\"solar-embedding-1-large\")\n",
     "\n",
     "# FAISS 인덱스 생성\n",
     "wine_db = FAISS.from_documents(\n",
@@ -1415,7 +1389,7 @@
     "# 병합된 DB 다시 저장\n",
     "wine_db.save_local(\"../db/wine_db\")\n",
     "\n",
-    "wine_retriever = menu_db.as_retriever(\n",
+    "wine_retriever = wine_db.as_retriever(\n",
     "    search_kwargs={'k': 4},\n",
     ")\n",
     "\n",
