--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1375,8 +1375,38 @@
    "execution_count": null,
    "id": "514fdf37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt-4o-mini\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No relevant docs were retrieved using the relevance score threshold 0.3\n",
+      "No relevant docs were retrieved using the relevance score threshold 0.3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "검색 결과: 1개\n",
+      "메뉴 번호: 5\n",
+      "메뉴 이름: 푸이 퓌세 2019\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
+    "\n",
+    "print(llm.model_name)\n",
     "\n",
     "embeddings_model = UpstageEmbeddings(model=\"solar-embedding-1-large\")\n",
     "\n",
@@ -1390,11 +1420,16 @@
     "wine_db.save_local(\"../db/wine_db\")\n",
     "\n",
     "wine_retriever = wine_db.as_retriever(\n",
-    "    search_kwargs={'k': 4},\n",
+    "    search_type=\"mmr\",\n",
+    "    search_kwargs={\"k\": 4, \"fetch_k\": 6}\n",
+    "    # search_type=\"similarity_score_threshold\",\n",
+    "    # search_kwargs={\"score_threshold\": 0.3, \"k\": 4}\n",
     ")\n",
     "\n",
-    "query = \"스테이크와 어울리는 와인을 추천해주세요.\"\n",
-    "docs = wine_retriever.invoke(query)\n",
+    "retriever = MultiQueryRetriever.from_llm(retriever=wine_retriever, llm=llm)\n",
+    "\n",
+    "query = \"주요 품종이 소비뇽인 와인을 추천해주세요.\"\n",
+    "docs = retriever.invoke(query)\n",
     "print(f\"검색 결과: {len(docs)}개\")\n",
     "\n",
     "for doc in docs:\n",
