--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "514fdf37",
    "metadata": {},
    "outputs": [
@@ -1380,24 +1380,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gpt-4o-mini\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No relevant docs were retrieved using the relevance score threshold 0.3\n",
-      "No relevant docs were retrieved using the relevance score threshold 0.3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "검색 결과: 1개\n",
+      "gpt-4o-mini\n",
+      "검색 결과: 4개\n",
       "메뉴 번호: 5\n",
       "메뉴 이름: 푸이 퓌세 2019\n",
+      "\n",
+      "메뉴 번호: 8\n",
+      "메뉴 이름: 오퍼스 원 2017\n",
+      "\n",
+      "메뉴 번호: 9\n",
+      "메뉴 이름: 샤토 디켐 2015\n",
+      "\n",
+      "메뉴 번호: 7\n",
+      "메뉴 이름: 풀리니 몽라쉐 1er Cru 2018\n",
       "\n"
      ]
     }
@@ -1422,8 +1417,6 @@
     "wine_retriever = wine_db.as_retriever(\n",
     "    search_type=\"mmr\",\n",
     "    search_kwargs={\"k\": 4, \"fetch_k\": 6}\n",
-    "    # search_type=\"similarity_score_threshold\",\n",
-    "    # search_kwargs={\"score_threshold\": 0.3, \"k\": 4}\n",
     ")\n",
     "\n",
     "retriever = MultiQueryRetriever.from_llm(retriever=wine_retriever, llm=llm)\n",
@@ -1448,12 +1441,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "93d4c3a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자료형: \n",
+      "<class 'langchain_core.tools.structured.StructuredTool'>\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "name: \n",
+      "db_search_menu_func\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "description: \n",
+      "('Securely retrieve and access authorized restaurant menu information from the '\n",
+      " 'encrypted database.\\n'\n",
+      " 'Use this tool only for menu-related queries to maintain data '\n",
+      " 'confidentiality.')\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "schema: \n",
+      "{'description': 'Securely retrieve and access authorized restaurant menu '\n",
+      "                'information from the encrypted database.\\n'\n",
+      "                'Use this tool only for menu-related queries to maintain data '\n",
+      "                'confidentiality.',\n",
+      " 'properties': {'query': {'title': 'Query', 'type': 'string'}},\n",
+      " 'required': ['query'],\n",
+      " 'title': 'db_search_menu_func',\n",
+      " 'type': 'object'}\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.tools import tool\n",
+    "\n",
     "# menu db 벡터 저장소 로드\n",
     "menu_db = FAISS.load_local(\n",
     "    \"../db/menu_db\", \n",
@@ -1493,10 +1516,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "b8ae1341",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "자료형: \n",
+      "<class 'langchain_core.tools.structured.StructuredTool'>\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "name: \n",
+      "db_search_wine_func\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "description: \n",
+      "('Securely retrieve and access authorized restaurant wine information from the '\n",
+      " 'encrypted database.\\n'\n",
+      " 'Use this tool only for wine-related queries to maintain data '\n",
+      " 'confidentiality.')\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "schema: \n",
+      "{'description': 'Securely retrieve and access authorized restaurant wine '\n",
+      "                'information from the encrypted database.\\n'\n",
+      "                'Use this tool only for wine-related queries to maintain data '\n",
+      "                'confidentiality.',\n",
+      " 'properties': {'query': {'title': 'Query', 'type': 'string'}},\n",
+      " 'required': ['query'],\n",
+      " 'title': 'db_search_wine_func',\n",
+      " 'type': 'object'}\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.tools import tool\n",
     "from typing import List\n",
@@ -1515,7 +1567,7 @@
     "   Securely retrieve and access authorized restaurant wine information from the encrypted database.\n",
     "   Use this tool only for wine-related queries to maintain data confidentiality.\n",
     "   \"\"\"\n",
-    "   docs = wine_db.similarity_search(query, k=2)\n",
+    "   docs = wine_db.similarity_search(query, k=4)\n",
     "   if len(docs) > 0:\n",
     "      return docs\n",
     "   \n",
@@ -1541,16 +1593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "51ac56a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_blipLYgjWOLVPOjn2VqRFmxs', 'function': {'arguments': '{\"query\": \"호주산 와인\"}', 'name': 'db_search_wine_func'}, 'type': 'function'}, {'id': 'call_MTfu396FxCud5z18JnlVrTwj', 'function': {'arguments': '{\"query\": \"시그니처 스테이크\"}', 'name': 'db_search_menu_func'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 59, 'prompt_tokens': 137, 'total_tokens': 196, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_560af6e559', 'id': 'chatcmpl-CJY1GiV7Mu4UVn0X8J9XfHRy582YA', 'service_tier': 'default', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--22cc67ad-d49d-486a-8a8e-32edf9d9db1a-0', tool_calls=[{'name': 'db_search_wine_func', 'args': {'query': '호주산 와인'}, 'id': 'call_blipLYgjWOLVPOjn2VqRFmxs', 'type': 'tool_call'}, {'name': 'db_search_menu_func', 'args': {'query': '시그니처 스테이크'}, 'id': 'call_MTfu396FxCud5z18JnlVrTwj', 'type': 'tool_call'}], usage_metadata={'input_tokens': 137, 'output_tokens': 59, 'total_tokens': 196, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "''\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "[{'args': {'query': '호주산 와인'},\n",
+      "  'id': 'call_blipLYgjWOLVPOjn2VqRFmxs',\n",
+      "  'name': 'db_search_wine_func',\n",
+      "  'type': 'tool_call'},\n",
+      " {'args': {'query': '시그니처 스테이크'},\n",
+      "  'id': 'call_MTfu396FxCud5z18JnlVrTwj',\n",
+      "  'name': 'db_search_menu_func',\n",
+      "  'type': 'tool_call'}]\n",
+      "----------------------------------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# LLM에 도구를 바인딩 (2개의 도구 바인딩)\n",
     "llm_with_tools = llm.bind_tools(tools=[db_search_menu_func, db_search_wine_func])\n",
     "\n",
     "# 도구 호출이 필요한 LLM 호출을 수행\n",
-    "query = \"시그니처 스테이크의 가격과 특징은 무엇인가요? 와인도 추천 해주세요.\"\n",
+    "query = \"호주산 와인을 추천 해주세요. 그리고 시그니처 스테이크의 가격과 특징은 무엇인가요? \"\n",
     "ai_msg = llm_with_tools.invoke(query)\n",
     "\n",
     "# LLM의 전체 출력 결과 출력\n",
