--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1648,14 +1648,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "23c3bba9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tavily_search_func\n",
+      "Searches the internet for information that does not exist in the database or for the latest information.\n",
+      "------------------------------\n",
+      "wiki_summary\n",
+      "Use this tool when you need to search for information on Wikipedia.\n",
+      "It searches for Wikipedia articles related to the user's query and returns\n",
+      "a summarized text. This tool is useful when general knowledge\n",
+      "or background information is required.\n",
+      "------------------------------\n",
+      "db_search_menu_func\n",
+      "Securely retrieve and access authorized restaurant menu information from the encrypted database.\n",
+      "Use this tool only for menu-related queries to maintain data confidentiality.\n",
+      "------------------------------\n",
+      "db_search_wine_func\n",
+      "Securely retrieve and access authorized restaurant wine information from the encrypted database.\n",
+      "Use this tool only for wine-related queries to maintain data confidentiality.\n",
+      "------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "tools = [tavily_search_func, wiki_summary, db_search_menu_func, db_search_wine_func]\n",
     "for tool in tools:\n",
-    "    print(tool.name)"
+    "    #print(type(tool))\n",
+    "    print(tool.name)\n",
+    "    print(tool.description)\n",
+    "    print(\"-\" *30)"
    ]
   },
   {
