--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1687,39 +1687,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "1eda10de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solar-pro\n",
-      "db_search_wine_func: \n",
-      "{'name': 'db_search_wine_func', 'args': {'query': '호주산 와인'}, 'id': 'chatcmpl-tool-50e7ea9ca4de42e3a92de43623cd256b', 'type': 'tool_call'}\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "db_search_menu_func: \n",
-      "{'name': 'db_search_menu_func', 'args': {'query': '채식주의자 메뉴'}, 'id': 'chatcmpl-tool-4e309ff716754b33a6d3c0fbffee9b86', 'type': 'tool_call'}\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "tool_msgs: \n",
-      " [ToolMessage(content=\"[Document(id='467a1beb-8f03-4540-9e3c-5926d2fce116', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 10, 'menu_name': '그랜지 2016'}, page_content='10. 그랜지 2016\\\\n    • 가격: ₩950,000\\\\n    • 주요 품종: 시라\\\\n    • 설명: 호주의 대표적인 아이콘 와인입니다. 블랙베리, 자두, 블랙 올리브의 강렬한 과실향과 함께 유칼립투스, 초콜릿, 가죽의 복잡한 향이 어우러집니다. 풀바디이며 강렬한 타닌과 산도가 특징적입니다. 놀라운 집중도와 깊이, 긴 여운을 자랑하며, 수십 년의 숙성 잠재력을 가집니다.'), Document(id='7cacf968-ebd2-4730-a6bb-9096d5010693', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 5, 'menu_name': '푸이 퓌세 2019'}, page_content='5. 푸이 퓌세 2019\\\\n   • 가격: ₩95,000\\\\n   • 주요 품종: 소비뇽 블랑\\\\n   • 설명: 프랑스 루아르 지역의 대표적인 화이트 와인입니다. 구스베리, 레몬, 라임의 상큼한 과실향과 함께 미네랄, 허브 노트가 특징적입니다. 날카로운 산도와 깔끔한 피니시가 인상적이며, 신선한 굴이나 해산물 요리와 탁월한 페어링을 이룹니다.'), Document(id='fb720b9b-85d3-4428-a636-fd4bdf05512e', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 1, 'menu_name': '샤토 마고 2015'}, page_content='1. 샤토 마고 2015\\\\n   • 가격: ₩450,000\\\\n   • 주요 품종: 카베르네 소비뇽, 메를로, 카베르네 프랑, 쁘띠 베르도\\\\n   • 설명: 보르도 메독 지역의 프리미엄 와인으로, 깊고 복잡한 풍미가 특징입니다. 블랙커런트, 블랙베리의 과실향과 함께 시더, 담배, 가죽 노트가 어우러집니다. 탄닌이 부드럽고 균형 잡힌 구조를 가지며, 긴 여운이 인상적입니다. 숙성 잠재력이 뛰어나 10-20년 이상 보관이 가능합니다.'), Document(id='d45cd452-336a-4449-bb26-cee0ee383d3a', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 8, 'menu_name': '오퍼스 원 2017'}, page_content='8. 오퍼스 원 2017\\\\n   • 가격: ₩650,000\\\\n   • 주요 품종: 카베르네 소비뇽, 카베르네 프랑, 메를로, 쁘띠 베르도\\\\n   • 설명: 캘리포니아 나파 밸리의 아이콘 와인입니다. 블랙베리, 카시스, 자두의 농축된 과실향과 함께 초콜릿, 에스프레소, 바닐라의 복잡한 향이 어우러집니다. 풀바디이면서도 우아한 구조를 가지며, 실키한 타닌과 긴 여운이 인상적입니다. 20-30년 이상의 숙성 잠재력을 가집니다.')]\", name='db_search_wine_func', tool_call_id='chatcmpl-tool-50e7ea9ca4de42e3a92de43623cd256b'), ToolMessage(content=\"[Document(id='cc60a6e4-b579-4e27-a924-2a6e160c3810', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 5, 'menu_name': '가든 샐러드'}, page_content='5. 가든 샐러드\\\\n   • 가격: ₩12,000\\\\n   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\\\\n   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.'), Document(id='2e76eb60-4531-4974-8ed5-8ed457a6cf0a', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 8, 'menu_name': '안심 스테이크 샐러드'}, page_content='8. 안심 스테이크 샐러드\\\\n   • 가격: ₩26,000\\\\n   • 주요 식재료: 소고기 안심, 루꼴라, 체리 토마토, 발사믹 글레이즈\\\\n   • 설명: 부드러운 안심 스테이크를 얇게 슬라이스하여 신선한 루꼴라 위에 올린 메인 요리 샐러드입니다. 체리 토마토와 파마산 치즈 플레이크로 풍미를 더하고, 발사믹 글레이즈로 마무리하여 고기의 풍미를 한층 끌어올렸습니다.'), Document(id='64632976-e74c-40df-a05f-334ab5b56118', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 9, 'menu_name': '치킨 콘피'}, page_content='9. 치킨 콘피\\\\n   • 가격: ₩23,000\\\\n   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\\\\n   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.'), Document(id='756956b1-e82c-451a-9fa7-1f49a61670e2', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 2, 'menu_name': '트러플 리조또'}, page_content='2. 트러플 리조또\\\\n   • 가격: ₩22,000\\\\n   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\\\\n   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.')]\", name='db_search_menu_func', tool_call_id='chatcmpl-tool-4e309ff716754b33a6d3c0fbffee9b86')]\n",
-      "----------------------------------------------------------------------------------------------------\n",
-      "<class 'langchain_core.messages.ai.AIMessage'>\n",
-      "호주산 와인으로 **\"그랜지 2016\"**을 추천드립니다.  \n",
-      "- **가격**: ₩950,000  \n",
-      "- **품종**: 시라  \n",
-      "- **특징**: 블랙베리와 자두의 강렬한 과실향, 풀바디와 강한 타닌, 10년 이상 숙성 가능한 호주 대표 아이콘 와인입니다.  \n",
-      "\n",
-      "채식주의자 메뉴로는 **\"가든 샐러드\"**를 추천합니다.  \n",
-      "- **가격**: ₩12,000  \n",
-      "- **재료**: 유기농 믹스 그린, 체리 토마토, 오이, 당근  \n",
-      "- **특징**: 동물성 재료가 전혀 없는 신선한 채소 샐러드로, 발사믹 드레싱과 함께 가벼운 식사나 사이드 메뉴로 적합합니다.  \n",
-      "\n",
-      "추가로 채식 옵션이 더 필요하시면 알려주세요! 😊\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datetime import datetime\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -1744,9 +1715,9 @@
     "        base_url=\"https://api.upstage.ai/v1\",\n",
     "        temperature=0.5\n",
     ")\n",
+    "print(llm.model_name)\n",
     "\n",
     "# 4개의 검색 도구를 LLM에 바인딩\n",
-    "print(llm.model_name)\n",
     "llm_with_tools = llm.bind_tools(tools=tools)\n",
     "\n",
     "# LLM 체인 생성\n",
@@ -1785,8 +1756,8 @@
     "\n",
     "# 체인 실행\n",
     "#query = \"시그니처 스테이크의 가격과 특징은 무엇인가요? 와인도 추천해주세요.\"\n",
-    "#query = \"와인 가격이 50만원 이상인 와인이 있나요?. 그리고 치킨 콘피의 가격과 특징은 무엇인가요? \"\n",
-    "query = \"호주산 와인이 있나요?. 그리고 채식주의자를 위한 메뉴를 추천해 주세요. \"\n",
+    "query = \"와인 가격이 50만원 이상인 와인이 있나요?. 스테이크 메뉴도 추천해 주세요.\"\n",
+    "#query = \"호주산 와인이 있나요?. 그리고 채식주의자를 위한 메뉴를 추천해 주세요. \"\n",
     "response = restaurant_menu_chain.invoke(query)\n",
     "print(type(response))\n",
     "\n",
@@ -1802,7 +1773,8 @@
    "outputs": [],
    "source": [
     "# 체인 실행\n",
-    "response = restaurant_menu_chain.invoke(\"파스타 메뉴가 있나요? 파스타의 역사 또는 유래를 알려주시고 서울 강남의 파스타 맛집도 추천해주세요.\")\n",
+    "query = \"파스타 메뉴가 있나요? 파스타의 역사 또는 유래를 알려주시고 서울 강남의 파스타 맛집도 추천해주세요.\"\n",
+    "response = restaurant_menu_chain.invoke(query)\n",
     "\n",
     "# 응답 출력 \n",
     "print(response.content)"
