--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1767,13 +1767,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "f93b3215",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wiki_summary: \n",
+      "{'name': 'wiki_summary', 'args': {'query': '파스타의 역사 또는 유래'}, 'id': 'chatcmpl-tool-2e5b84c67b0d4aa6a3fbda5753ec1b00', 'type': 'tool_call'}\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "tavily_search_func: \n",
+      "{'name': 'tavily_search_func', 'args': {'query': '2025년 9월 기준 서울 강남 파스타 맛집 추천'}, 'id': 'chatcmpl-tool-ff27b4d316564b63b17deadc2e49d658', 'type': 'tool_call'}\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "db_search_wine_func: \n",
+      "{'name': 'db_search_wine_func', 'args': {'query': '파스타와 어울리는 와인'}, 'id': 'chatcmpl-tool-bc7a6eb314fb4abdb3f4251eb883f0d9', 'type': 'tool_call'}\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "tool_msgs: \n",
+      " [ToolMessage(content='이탈리아 요리(쿠치나 이탈리아나)는 기원전 4세기부터 다양한 역사적 변화와 함께 발전해왔으며, 특히 신대륙에서 들어온 재료들로 인해 큰 변화가 발생하였다. 지역에 따라 다양한 특성 및 식재료가 있으며, 북부는 쌀과 유제품을, 남부는 올리브와 토마토를 주로 사용한다. 요리는 간결함이 특징이며, 주로 4~8개의 재료로 조리된다. 카르보나라 같은 대표적인 파스타 요리는 로마에서 유래되었으며, 다양한 조리법과 재료가 사용된다. 카르보나라의 명칭은 석탄 광부를 의미하며, 제2차 세계 대전 이후에 현재의 형태로 발전하였다. 요리의 역사는 아케스트라투스의 저작에서 시작되며, 중세와 근대에도 여러 저명한 요리책과 요리사들의 영향으로 발전해왔다.', name='wiki_summary', tool_call_id='chatcmpl-tool-2e5b84c67b0d4aa6a3fbda5753ec1b00'), ToolMessage(content='<Document href=\"https://todflrh06.tistory.com/3\"/>\\n빵미123\\n\\n카테고리 없음\\n\\n서울 강남 파스타 맛집 추천 BEST 5\\n\\n서울 강남 파스타 맛집 추천 BEST 5\\n\\n이탈리안 음식의 정수를 맛볼 수 있는 강남! 특히 파스타 맛집이 많아 선택이 어려운 경우가 많죠. 그래서 직접 방문하고 엄선한 서울 강남 파스타 맛집 5곳을 소개해 드릴게요! 분위기, 맛, 가격까지 모두 고려한 리스트이니 참고하세요. 😊\\n\\n1. 라비타 (La Vita)\\n\\n라비타는 크리미한 트러플 크림 파스타로 유명한 곳이에요. 부드럽고 진한 크림 소스가 면과 잘 어우러져 고급스러운 맛을 느낄 수 있어요. 감바스도 새우가 신선해서 함께 곁들이기 좋아요!\\n\\n2. 볼라레 (VolaRe)\\n\\n해산물이 듬뿍 들어간 봉골레 파스타가 유명한 곳입니다. 바지락과 새우가 가득 들어가 시원한 감칠맛이 매력적이에요. 양도 푸짐해서 가성비 좋은 곳을 찾는다면 추천해요!\\n\\n3. 더 테이블 (The Table) [...] 더 테이블의 로제 파스타는 진하고 깊은 풍미가 매력적인 메뉴예요. 크림과 토마토 소스의 조화가 부드러우면서도 고소한 맛을 내서 계속 먹고 싶어지는 맛입니다.\\n\\n4. 오스테리아 밀라노 (Osteria Milano)\\n\\n정통 이탈리안 스타일의 파스타를 맛볼 수 있는 곳으로, 크림 없이 계란 노른자로만 만든 까르보나라가 인기 메뉴입니다. 진한 치즈 풍미와 고소한 맛이 일품이에요!\\n\\n5. 포르타벨라 (Portabella)\\n\\n조용한 분위기에서 맛있는 이탈리안 요리를 즐길 수 있는 곳이에요. 고기와 토마토의 깊은 맛이 어우러진 라구 파스타가 대표 메뉴이며, 트러플 향이 가득한 피자도 추천합니다!\\n\\n마무리\\n\\n강남에는 정말 다양한 파스타 맛집이 있지만, 맛과 분위기, 가성비까지 고려해 엄선한 5곳을 소개해드렸어요. 어떤 곳이 가장 끌리시나요? 다음에 강남 방문하시면 꼭 한 번 들러보세요! 😊\\n\\n\\'카테고리 없음\\'의 다른글\\n\\n빵미123\\n\\ntodflrh06 님의 블로그 입니다.\\n\\nTag\\n</Document>\\n---\\n<Document href=\"https://kr.trip.com/moments/theme/destination-gangnam-2135611-restaurant-993134/\"/>\\n📍 팡뮤제 팡뮤제는 강남역 인근에 위치한 대형 베이커리 카페입니다. 넓은 공간 덕분에 사람이 많은 강남에서 프라이빗하게 데이트를 할 수 있는 카페입니다. 특히 타르트가 정말 맛있으니 꼭 먹어보시기 바랍니다. #실내데이트#감성카페#강남역카페 #팡뮤제\\n\\n  애슐잉\\n\\n  \\uf5aa\\n ## 도심에서 최고의 뇨키를 맛볼 수 있는 Whuchu 레스토랑\\n\\n  우리는 도심에서 모임을 가졌고, 친구가 추천한 Whuchu 레스토랑이라는 가게를 방문했습니다. 이곳은 파스타, 뇨키, 라자냐를 판매하는 곳으로, 우리는 각각 하나씩과 하우스 샐러드 한 접시를 주문했습니다. 각 요리의 맛은 매우 훌륭하고 독특했으며, 감자 뇨키는 한국에서 먹어본 것 중 최고였습니다!!! 감자의 신선함이 입안에 퍼지는 순간 바로 느낄 수 있습니다. 라자냐도 고기가 듬뿍 들어가 있어 매우 맛있었습니다. 이 레스토랑을 정말 좋아하게 되었고, 꼭 다시 올 것입니다.\\n\\n  johnswj90\\n\\n  \\uf5aa\\n ## 넓고, 편안하고, 미학적 [...] 몰트하우스 강남점> 강남역 GT타워 뒤편에 위치한 몰트하우스 강남점입니다. 최근에 몇몇 후기를 보고 언젠가 꼭 가봐야겠다고 생각해서 저장해 두었습니다. 그런데 왜인지는 모르겠지만, 협찬 요청 이메일(블로그 게시글)을 받았습니다. 지금은 협찬을 받지 않지만, 바로 계획을 세워 지난 주말 저녁에 방문했습니다. 겉보기에는 일반적인 상업 시설이나 오피스 빌딩의 1층 매장처럼 보였지만, 안으로 들어가 보니 전혀 그렇지 않았습니다. 천장이 엄청나게 높은 넓은 실내는 마치 2층짜리 건물처럼 보였습니다. 밤하늘의 별처럼 반짝이는 중앙의 별도 바는 사진에서 수도 없이 봤던 풍경이었습니다. 음식은 다른 전문 레스토랑처럼 정말 맛있었습니다. 신선한 파스타와 마르게리타는 심플하면서도 이탈리아 음식에 딱 어울리는 맛이었고, 파스타는 물론 소스까지 마지막 한 방울까지 다 먹었어요. 협찬으로 따로 주문한 네그로니도 정말 일품이었어요! 주말이 끝나갈 무렵인데도 사람들이 계속 들어와서 놀랐어요. 테이블이 [...] 건강하고 신선하며, 테이블에서 직접 요리하고 포장하는 방식으로 소통이 가능합니다. ⸻ • 주소: 월남쌈&샤브샤브 샤블리 강남점 (Gangnam Branch) 서울특별시 강남구 강남대로 372, 3층 (서울특별시 강남구 강남대로 372, 3층) • 가입: 입장료 없음(음식값만 지불하면 됩니다. 보통 1~2인 세트 메뉴는 1인당 20,000~30,000원 \\u200b\\u200b정도 시작합니다) • 운영시간: 매일 오픈 오전 11시 – 오후 10시 (마지막 주문 오후 9시)\\n</Document>', name='tavily_search_func', tool_call_id='chatcmpl-tool-ff27b4d316564b63b17deadc2e49d658'), ToolMessage(content=\"[Document(id='5bc5657e-7782-4282-8dfc-ad28961f5baf', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 7, 'menu_name': '풀리니 몽라쉐 1er Cru 2018'}, page_content='7. 풀리니 몽라쉐 1er Cru 2018\\\\n   • 가격: ₩320,000\\\\n   • 주요 품종: 샤르도네\\\\n   • 설명: 부르고뉴 최고의 화이트 와인 중 하나로 꼽힙니다. 레몬, 사과, 배의 과실향과 함께 헤이즐넛, 버터, 바닐라의 풍부한 향이 어우러집니다. 미네랄리티가 돋보이며, 크리미한 텍스처와 긴 여운이 특징입니다. 해산물, 닭고기, 크림 소스 파스타와 좋은 페어링을 이룹니다.'), Document(id='d4b806da-487c-4dc2-ae05-0cbc66e914b5', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 6, 'menu_name': '바롤로 몬프리바토 2017'}, page_content='6. 바롤로 몬프리바토 2017\\\\n   • 가격: ₩280,000\\\\n   • 주요 품종: 네비올로\\\\n   • 설명: 이탈리아 피에몬테 지역의 프리미엄 레드 와인입니다. 붉은 체리, 장미, 타르의 복잡한 아로마가 특징이며, 가죽, 담배, 스파이스 노트가 더해집니다. 강렬한 타닌과 높은 산도가 인상적이며, 긴 숙성 잠재력을 가집니다. 숙성된 치즈나 트러플 요리와 잘 어울립니다.'), Document(id='7cacf968-ebd2-4730-a6bb-9096d5010693', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 5, 'menu_name': '푸이 퓌세 2019'}, page_content='5. 푸이 퓌세 2019\\\\n   • 가격: ₩95,000\\\\n   • 주요 품종: 소비뇽 블랑\\\\n   • 설명: 프랑스 루아르 지역의 대표적인 화이트 와인입니다. 구스베리, 레몬, 라임의 상큼한 과실향과 함께 미네랄, 허브 노트가 특징적입니다. 날카로운 산도와 깔끔한 피니시가 인상적이며, 신선한 굴이나 해산물 요리와 탁월한 페어링을 이룹니다.'), Document(id='8329d1fb-314d-4544-bda4-3ee343bebfcf', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 3, 'menu_name': '사시카이아 2018'}, page_content='3. 사시카이아 2018\\\\n   • 가격: ₩420,000\\\\n   • 주요 품종: 카베르네 소비뇽, 카베르네 프랑, 메를로\\\\n   • 설명: 이탈리아 토스카나의 슈퍼 투스칸 와인입니다. 블랙베리, 카시스의 강렬한 과실향과 함께 허브, 가죽, 스파이스 노트가 복잡성을 더합니다. 풀바디이지만 우아한 타닌과 신선한 산도가 균형을 잡아줍니다. 오크 숙성으로 인한 바닐라, 초콜릿 향이 은은하게 느껴집니다.')]\", name='db_search_wine_func', tool_call_id='chatcmpl-tool-bc7a6eb314fb4abdb3f4251eb883f0d9')]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "### 파스타의 역사 및 유래 (위키피디아 요약)  \n",
+      "파스타는 고대 지중해 문명에서 기원한 것으로 추정되며, 이탈리아에서 지역별로 다양한 형태로 발전했습니다. 13세기 마르코 폴로가 중국에서 파스타 제조법을 가져왔다는 설이 있지만, 이는 역사적 근거가 부족합니다. 현대 파스타의 형태는 18세기 이후 토마토 도입 이후 확립되었으며, 지역별 재료(북부: 버터/크림, 남부: 올리브 오일/토마토)에 따라 차이가 있습니다.  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 서울 강남 최신 파스타 맛집 (2025년 9월 기준)  \n",
+      "1. **라비타 (La Vita)**  \n",
+      "   - **추천 메뉴**: 트러플 크림 파스타  \n",
+      "   - **특징**: 진한 크림 소스와 트러플 향이 어우러진 고급스러운 맛  \n",
+      "\n",
+      "2. **볼라레 (VolaRe)**  \n",
+      "   - **추천 메뉴**: 봉골레 파스타  \n",
+      "   - **특징**: 신선한 해산물과 시원한 감칠맛  \n",
+      "\n",
+      "3. **더 테이블 (The Table)**  \n",
+      "   - **추천 메뉴**: 로제 파스타  \n",
+      "   - **특징**: 크림과 토마토의 조화로 부드럽지만 깊은 풍미  \n",
+      "\n",
+      "4. **오스테리아 밀라노 (Osteria Milano)**  \n",
+      "   - **추천 메뉴**: 정통 까르보나라  \n",
+      "   - **특징**: 계란 노른자와 치즈만으로 만든 진한 소스의 클래식  \n",
+      "\n",
+      "5. **포르타벨라 (Portabella)**  \n",
+      "   - **추천 메뉴**: 라구 파스타  \n",
+      "   - **특징**: 고기와 토마토의 풍부한 맛이 어우러진 이탈리아 정통 스타일  \n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 파스타와 어울리는 와인 추천 (데이터베이스 검색)  \n",
+      "1. **풀리니 몽라쉐 1er Cru 2018** (샤르도네)  \n",
+      "   - **페어링**: 크림 소스 파스타, 해산물  \n",
+      "   - **특징**: 버터, 바닐라 향과 미네랄리티가 돋보이는 화이트 와인  \n",
+      "\n",
+      "2. **푸이 퓌세 2019** (소비뇽 블랑)  \n",
+      "   - **페어링**: 토마토 기반 파스타, 해산물  \n",
+      "   - **특징**: 상큼한 산도와 허브 노트로 가벼움 강조  \n",
+      "\n",
+      "3. **바롤로 몬프리바토 2017** (네비올로)  \n",
+      "   - **페어링**: 트러플/고기 소스 파스타  \n",
+      "   - **특징**: 강렬한 타닌과 스파이스 노트로 풍부한 맛과 조화  \n",
+      "\n",
+      "> **추천 전략**:  \n",
+      "> - **크림/로제 파스타** → 풀리니 몽라쉐 (부드럽고 풍부한 화이트)  \n",
+      "> - **토마토/해산물 파스타** → 푸이 퓌세 (상큼한 산도로 밸런스)  \n",
+      "> - **트러플/고기 파스타** → 바롤로 (강렬한 레드로 깊은 풍미 강조)  \n",
+      "\n",
+      "각 맛집 방문 시 와인 리스트를 확인해 페어링 가능성을 확인하는 것도 좋습니다! 🍝🍷\n"
+     ]
+    }
+   ],
    "source": [
     "# 체인 실행\n",
-    "query = \"파스타 메뉴가 있나요? 파스타의 역사 또는 유래를 알려주시고 서울 강남의 파스타 맛집도 추천해주세요.\"\n",
+    "query = \"파스타의 역사 또는 유래를 알려주시고 최근에 가장 인기 있는 서울 강남의 파스타 맛집도 웹에서 검색해서 알려주시고 와인도 추천해 주세요.\"\n",
     "response = restaurant_menu_chain.invoke(query)\n",
     "\n",
     "# 응답 출력 \n",
@@ -1845,13 +1911,15 @@
     "\n",
     "# 검색 도구를 직접 LLM에 바인딩 가능\n",
     "tools = [tavily_search_func, wiki_summary, db_search_menu_func, db_search_wine_func]\n",
+    "print(llm.model_name)\n",
     "llm_with_tools = llm.bind_tools(tools=tools)\n",
     "\n",
     "# Few-shot 프롬프트를 사용한 체인 구성\n",
     "fewshot_search_chain = few_shot_prompt | llm_with_tools\n",
     "\n",
     "# 체인 실행\n",
-    "query = \"스테이크 메뉴가 있나요? 스테이크와 어울리는 와인도 추천해주세요.\"\n",
+    "#query = \"스테이크 메뉴가 있나요? 스테이크와 어울리는 와인도 추천해주세요.\"\n",
+    "query = \"파스타의 역사 또는 유래를 알려주시고 최근에 가장 인기 있는 서울의 파스타 맛집도 알려주시고 와인도 추천해 주세요.\"\n",
     "response = fewshot_search_chain.invoke(query)\n",
     "\n",
     "# 결과 출력\n",
