--- a/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
+++ b/src/mylangchain_app/04LangChainTool/20-1LangChain_ToolCalling.ipynb
@@ -1865,10 +1865,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "5fd743c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solar-pro\n",
+      "{'name': 'tavily_search_func', 'args': {'query': '2024년 서울 인기 파스타 맛집'}, 'id': 'chatcmpl-tool-b67222e986cc4c5596e218cdbf657fc3', 'type': 'tool_call'}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.messages import AIMessage, HumanMessage, ToolMessage\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -1953,10 +1962,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "49a4d3c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wiki_summary: \n",
+      "{'name': 'wiki_summary', 'args': {'query': '파스타의 역사 또는 유래'}, 'id': 'chatcmpl-tool-4e4edfd4a1f44ee2b48db51cce9dbdda', 'type': 'tool_call'}\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "tavily_search_func: \n",
+      "{'name': 'tavily_search_func', 'args': {'query': '2025년 9월 기준 서울의 인기 파스타 맛집'}, 'id': 'chatcmpl-tool-95b651f2d0db4bfd81afeb48dbb30383', 'type': 'tool_call'}\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "db_search_wine_func: \n",
+      "{'name': 'db_search_wine_func', 'args': {'query': '파스타와 잘 어울리는 와인'}, 'id': 'chatcmpl-tool-28aec2de0d674971bcf41ed85112ce95', 'type': 'tool_call'}\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "tool_msgs: \n",
+      " [ToolMessage(content='이탈리아 요리(쿠치나 이탈리아나)는 기원전 4세기부터 발전해 온 요리로, 지역마다 고유한 특성을 지니며 북부는 쌀과 유제품 중심, 남부는 올리브와 해산물 중심이다. 요리는 주로 4~8개의 재료로 간결하게 준비되며, 재료의 질에 따라 맛이 달라진다. 치즈와 포도주는 요리에서 중요한 역할을 하며, 2013년 CNN은 이탈리아 요리를 세계 최고의 요리로 선정했다. \\n\\n카르보나라(스파게티 카르보나라)는 로마의 파스타 요리로, 계란 노른자, 치즈, 염장 돼지고기, 후추를 사용해 만든다. 이 요리는 20세기 중반에 현재의 형태로 확립되었으며, 주로 구안찰레나 판체타를 사용하고, 치즈는 페코리노 로마노를 넣는다. 카르보나라의 유래는 불확실하지만, 석탄 광부를 위한 음식으로 기원했거나 로마의 시내 요리에서 비롯되었다는 설이 있다. 변형된 레시피에서는 크림이나 채소가 추가되기도 하나, 이는 이탈리아 요리의 전통과 다르다.', name='wiki_summary', tool_call_id='chatcmpl-tool-4e4edfd4a1f44ee2b48db51cce9dbdda'), ToolMessage(content='<Document href=\"https://www.bluer.co.kr/search?query=%ED%8C%8C%EC%8A%A4%ED%83%80\"/>\\n수준 높은 화덕피자와 파스타를 맛볼 수 있는 곳. 참나무 장작을 사용한 화덕에 구운 피자를 선보이며, 진득한 라구 소스로 만든 파스타도 인기 메뉴다. 트러플을 올린 피자와 파스타로 화제가 되기도 하였으며 트러플을 넣어 만든 생면을 사용하는 트러플탈리올리니도 추천할 만하다. \\n\\n평가하기\\n\\n   \\n  \\n\\n       Image 137\\n       Image 138\\n\\n       서울 2025 선정\\n\\n### 썬더버드\\n\\nImage 139Image 140;)\\n\\n    1.   샐러드\\n    2.   다이어트식\\n\\nImage 141\\n\\n서울특별시 강남구 압구정로60길 18 (청담동) SG DINEHILL빌딩 1층\\n\\nImage 142\\n\\n현재 영업중\\n\\n21:00에 영업 종료 [...] 직접 만드는 생면 파스타 전문 레스토랑. 미국, 이탈리아에서 실력을 쌓은 신가영, 임홍근 부부 셰프가 운영한다. 테이스팅코스 한 가지로만 운영되며, 다양한 제철 식재료를 활용한 요리와 파스타를 맛볼 수 있다. 주류 주문은 필수다. \\n\\n평가하기\\n\\n   \\n  \\n\\n       Image 113\\n       Image 114\\n\\n       레드리본 선정\\n       서울 2025 선정\\n\\n### 다로베\\n\\nImage 115Image 116;)\\n\\n    1.   피자\\n\\nImage 117\\n\\n서울특별시 성동구 왕십리로11길 7 (성수동1가) \\n\\nImage 118\\n\\n현재 영업중\\n\\n21:30에 영업 종료\\n\\n 나폴리 장인이 만든 참나무 화덕에 구운 정통 나폴리 피자가 대표메뉴다. 프로슈토와 리코타치즈, 라구소스 등이 들어간 칼조네 피자가 추천 메뉴. 피자 외에 파스타도 선보인다. 나폴리와 도쿄에서 피자를 배운 셰프가 운영하고 있다. \\n\\n평가하기 [...] 김호윤 셰프가 운영하는 이탈리안 레스토랑으로, 셰프의 소스와 면에 대한 열정을 엿볼 수 있다. 시그니처 메뉴는 트러플 향이 그윽한 화이트라구파스타며, 포카치아를 추가로 주문해 곁들여 먹어도 좋다. 오픈 주방에 밝은 색감의 인테리어, 그리고 커다란 창이 개방감을 준다. \\n\\n평가하기\\n\\n   \\n  \\n\\n       Image 41\\n       Image 42\\n\\n       레드리본 선정\\n       서울 2025 선정\\n\\n### 마테오견문록\\n\\nImage 43Image 44;)\\n\\n    1.   파스타\\n\\nImage 45\\n\\n서울특별시 성동구 금호로 17 (금호동4가) 상가 1층\\n\\nImage 46\\n\\n현재 영업중\\n\\n마지막 주문은 13:30까지\\n\\n 프렌치 다이닝 고메트리가 밍글스 수셰프 출신 신왕열 셰프와 함께 오픈한 이탈리안 레스토랑. 송파에서 1인 생면 파스타집을 운영하기도 했던 신셰프의 탄탄한 내공의 다채로운 파스타 요리를 맛볼 수 있다. \\n\\n평가하기\\n</Document>\\n---\\n<Document href=\"https://www.siksinhot.com/theme/magazine/5878\"/>\\n2025-09-25ì\\x97\\x85ë\\x8d°ì\\x9d´í\\x8a¸\\n\\nì\\x8b¤ì\\x8b\\x9cê°\\x84 ë§\\x9bì§\\x91 ë\\x89´ì\\x8a¤\\n\\n1ì\\x9c\\x84ì\\x84\\x9cì\\x9a¸·ì\\x88\\x98ë\\x8f\\x84ê¶\\x8c ë\\x93±ê°\\x88ë¹\\x84 ë§\\x9bì§\\x91 BEST 3\\n\\n5632ì\\x9c\\x84ì \\x95ì\\x84 ·í\\x83\\x9cë°±·ì\\x98\\x81ì\\x9b\\x94 ì\\x88¨ì\\x9d\\x80 ë§\\x9bì§\\x91 BEST 5 \\x80\\x93 ì²\\xadì \\x95 ê°\\x95ì\\x9b\\x90ì\\x9d\\x98 ë¯¸ì\\x8b\\x9d ì\\x97¬í\\x96\\x89\\n\\n913ì\\x9c\\x84êµ\\xadë¦½ì¤\\x91ì\\x95\\x99ë°\\x95ë¬¼ê´\\x80 ë§\\x9bì§\\x91 BEST 5 \\x80\\x93 ê´\\x80ë\\x9e\\x8c í\\x9b\\x84 ì¦\\x90ê¸°ë\\x8a\\x94 í\\x95\\x9c ë\\x81¼\\n\\n574ì\\x9c\\x84ì§¬ë½\\x95ì\\x9d\\x98 ë\\x8f\\x84ì\\x8b\\x9c! êµ°ì\\x82° 5ë\\x8c\\x80 ì§¬ë½\\x95 ë§\\x9bì§\\x91 BEST 5\\n\\n2527905ì\\x9c\\x84ì\\x83\\x9dí\\x99\\x9cì\\x9d\\x98 ë\\x8b¬ì\\x9d¸, ì \\x84êµ\\xad ì\\x9d´ì\\x83\\x89 ê¹\\x80ë°¥ ë§\\x9bì§\\x91 BEST 5\\n\\n188528\\n\\n## 3. ë³¸ì§\\x88ì\\x97\\x90 ì¶©ì\\x8b¤í\\x95\\x9c ì\\x9a\\x94ë¦¬ê°\\x80 ì\\x9e\\x88ë\\x8a\\x94 ë¶\\x84ì\\x9c\\x84ê¸° ë§\\x9bì§\\x91, ì\\x84±ì\\x88\\x98 \\'ë°\\x94ì°\\x8cì\\x84\\x9cì\\x9a¸\\'\\n\\në§¤ì\\x9e¥ì \\x95ë³´ ë°\\x94ë¡\\x9cê°\\x80ê¸°\\x96¶ [...] bacci\\\\_seoulë\\x8b\\x98ì\\x9d\\x98 ì\\x9d¸ì\\x8a¤í\\x83\\x80ê·¸ë\\x9e¨(ê³µì\\x8b\\x9d)\\n\\nbacci\\\\_seoulë\\x8b\\x98ì\\x9d\\x98 ì\\x9d¸ì\\x8a¤í\\x83\\x80ê·¸ë\\x9e¨(ê³µì\\x8b\\x9d) [...] radici\\\\_seoulë\\x8b\\x98ì\\x9d\\x98 ì\\x9d¸ì\\x8a¤í\\x83\\x80ê·¸ë\\x9e¨(ê³µì\\x8b\\x9d)\\n\\nradici\\\\_seoulë\\x8b\\x98ì\\x9d\\x98 ì\\x9d¸ì\\x8a¤í\\x83\\x80ê·¸ë\\x9e¨(ê³µì\\x8b\\x9d)\\n</Document>', name='tavily_search_func', tool_call_id='chatcmpl-tool-95b651f2d0db4bfd81afeb48dbb30383'), ToolMessage(content=\"[Document(id='5bc5657e-7782-4282-8dfc-ad28961f5baf', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 7, 'menu_name': '풀리니 몽라쉐 1er Cru 2018'}, page_content='7. 풀리니 몽라쉐 1er Cru 2018\\\\n   • 가격: ₩320,000\\\\n   • 주요 품종: 샤르도네\\\\n   • 설명: 부르고뉴 최고의 화이트 와인 중 하나로 꼽힙니다. 레몬, 사과, 배의 과실향과 함께 헤이즐넛, 버터, 바닐라의 풍부한 향이 어우러집니다. 미네랄리티가 돋보이며, 크리미한 텍스처와 긴 여운이 특징입니다. 해산물, 닭고기, 크림 소스 파스타와 좋은 페어링을 이룹니다.'), Document(id='d4b806da-487c-4dc2-ae05-0cbc66e914b5', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 6, 'menu_name': '바롤로 몬프리바토 2017'}, page_content='6. 바롤로 몬프리바토 2017\\\\n   • 가격: ₩280,000\\\\n   • 주요 품종: 네비올로\\\\n   • 설명: 이탈리아 피에몬테 지역의 프리미엄 레드 와인입니다. 붉은 체리, 장미, 타르의 복잡한 아로마가 특징이며, 가죽, 담배, 스파이스 노트가 더해집니다. 강렬한 타닌과 높은 산도가 인상적이며, 긴 숙성 잠재력을 가집니다. 숙성된 치즈나 트러플 요리와 잘 어울립니다.'), Document(id='7cacf968-ebd2-4730-a6bb-9096d5010693', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 5, 'menu_name': '푸이 퓌세 2019'}, page_content='5. 푸이 퓌세 2019\\\\n   • 가격: ₩95,000\\\\n   • 주요 품종: 소비뇽 블랑\\\\n   • 설명: 프랑스 루아르 지역의 대표적인 화이트 와인입니다. 구스베리, 레몬, 라임의 상큼한 과실향과 함께 미네랄, 허브 노트가 특징적입니다. 날카로운 산도와 깔끔한 피니시가 인상적이며, 신선한 굴이나 해산물 요리와 탁월한 페어링을 이룹니다.'), Document(id='8329d1fb-314d-4544-bda4-3ee343bebfcf', metadata={'source': '../data/restaurant_wine.txt', 'menu_number': 3, 'menu_name': '사시카이아 2018'}, page_content='3. 사시카이아 2018\\\\n   • 가격: ₩420,000\\\\n   • 주요 품종: 카베르네 소비뇽, 카베르네 프랑, 메를로\\\\n   • 설명: 이탈리아 토스카나의 슈퍼 투스칸 와인입니다. 블랙베리, 카시스의 강렬한 과실향과 함께 허브, 가죽, 스파이스 노트가 복잡성을 더합니다. 풀바디이지만 우아한 타닌과 신선한 산도가 균형을 잡아줍니다. 오크 숙성으로 인한 바닐라, 초콜릿 향이 은은하게 느껴집니다.')]\", name='db_search_wine_func', tool_call_id='chatcmpl-tool-28aec2de0d674971bcf41ed85112ce95')]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "('### 파스타의 역사 및 유래  \\n'\n",
+      " '파스타는 기원전 4세기부터 발전한 이탈리아 요리의 핵심 요소로, 지역별로 독특한 특성을 지닙니다. 북부는 쌀과 유제품, 남부는 올리브와 '\n",
+      " '해산물을 주로 사용하며, 재료의 품질을 중시하는 간결한 조리법이 특징입니다. 현대식 파스타 요리는 20세기 중반에 정립되었으며, '\n",
+      " '카르보나라(계란 노른자, 페코리노 치즈, 판체타 사용)와 같은 요리가 대표적입니다.  \\n'\n",
+      " '\\n'\n",
+      " '---\\n'\n",
+      " '\\n'\n",
+      " '### 2025년 9월 기준 서울 인기 파스타 맛집  \\n'\n",
+      " '1. **썬더버드** (강남구 압구정로60길 18)  \\n'\n",
+      " '   - **특징**: 미국·이탈리아에서 경력을 쌓은 셰프 부부가 운영하는 생면 파스타 전문점. 테이스팅 코스 제공.  \\n'\n",
+      " '   - **추천 메뉴**: 제철 재료 활용 파스타 + 주류 페어링 필수.  \\n'\n",
+      " '\\n'\n",
+      " '2. **마테오견문록** (성동구 금호로 17)  \\n'\n",
+      " '   - **특징**: 밍글스 출신 셰프의 다채로운 파스타. 1인 운영 생면 파스타집 경험 보유.  \\n'\n",
+      " '\\n'\n",
+      " '3. **다로베** (성동구 왕십리로11길 7)  \\n'\n",
+      " '   - **특징**: 나폴리·도쿄에서 훈련한 셰프의 정통 나폴리 피자 및 파스타. 칼조네 피자 추천.  \\n'\n",
+      " '\\n'\n",
+      " '4. **바냐라** (홍대 인근)  \\n'\n",
+      " '   - **특징**: 트러플을 활용한 생면 파스타. 화이트라구파스타 시그니처 메뉴.  \\n'\n",
+      " '\\n'\n",
+      " '---\\n'\n",
+      " '\\n'\n",
+      " '### 파스타와 어울리는 와인 추천  \\n'\n",
+      " '1. **풀리니 몽라쉐 1er Cru 2018** (샤르도네)  \\n'\n",
+      " '   - **가격**: ₩320,000  \\n'\n",
+      " '   - **특징**: 레몬·버터 향 + 크리미한 텍스처. 크림 소스 파스타와 페어링 최적.  \\n'\n",
+      " '\\n'\n",
+      " '2. **푸이 퓌세 2019** (소비뇽 블랑)  \\n'\n",
+      " '   - **가격**: ₩95,000  \\n'\n",
+      " '   - **특징**: 상큼한 산도. 해산물 파스타와 잘 어울림.  \\n'\n",
+      " '\\n'\n",
+      " '3. **바롤로 몬프리바토 2017** (네비올로)  \\n'\n",
+      " '   - **가격**: ₩280,000  \\n'\n",
+      " '   - **특징**: 트러플·숙성 치즈 요리와의 궁합 우수.  \\n'\n",
+      " '\\n'\n",
+      " '> 📌 **추천 조합**: 크림 파스타 → 샤르도네, 해산물 파스타 → 소비뇽 블랑, 트러플 파스타 → 바롤로.  \\n'\n",
+      " '\\n'\n",
+      " '---  \\n'\n",
+      " '*모든 정보는 2025년 9월 25일 기준 최신 데이터를 반영했습니다.*')\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "from langchain_core.messages import AIMessage, HumanMessage, ToolMessage\n",
@@ -2025,7 +2093,8 @@
     "\n",
     "\n",
     "# 체인 실행\n",
-    "query = \"스테이크 메뉴가 있나요? 스테이크와 어울리는 와인을 추천해 주세요.\"\n",
+    "#query = \"스테이크 메뉴가 있나요? 스테이크와 어울리는 와인을 추천해 주세요.\"\n",
+    "query = \"파스타의 역사 또는 유래를 알려주시고 최근에 가장 인기 있는 서울의 파스타 맛집도 웹에서 검색해서 알려주시고 와인도 추천해 주세요.\"\n",
     "response = restaurant_menu_chain.invoke(query)\n",
     "\n",
     "# 응답 출력 \n",
